CSS clock has finished

--- a/01-JS-music-kit/css/layout.css
+++ b/01-JS-music-kit/css/layout.css
@@ -3,7 +3,7 @@
 body{
 	margin:0px;
 	padding:0px;
-	font-family: 'Work Sans', sans-serif;
+	font-family: 'Hammersmith One', sans-serif;
 }
 
 .layout{
