--- a/05-Flex-Panel-Image-Gallery/css/layout.css
+++ b/05-Flex-Panel-Image-Gallery/css/layout.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   width:100%;
   font-family: 'Bree Serif', serif;
+   overflow: hidden;
  }
  .panels{
   display:flex;
@@ -22,11 +23,41 @@
   justify-content: center;
   align-items: center;
   color: white;
+  transition: 
+    font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+    flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+    background 0.2s;
+ }
+ .panel>p{
+  margin: 0;
+  width: 100%;
+  flex:1 0 auto;
+  
+  display: flex;
+  flex-flow:column nowrap;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.5s;
+
  }
  .panel p:nth-child(2){
-  font-size:3em;
+  font-size:2.5em;
  
  }
+ .panel > p:first-child{
+  transform:translateY(-100%);
+  
+ }
+   .panel > p:last-child{
+    transform:translateY(100%);
+  }
+ .panel.open-active > p:first-child,  .panel.open-active > p:last-child{
+  transform:translateY(0%);
+ }
+.panel.open{
+  flex:5;
+  font-size: 4em;
+}
     .panel1 { background-image:url(https://source.unsplash.com/BcVvVvqiCGA/1500x1500); }
     .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
     .panel3 { background-image:url(https://source.unsplash.com/8kDOOrs608I/1500x1500); }
