--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0px;
 	padding:0px;
-	background: url('../img/bg3-min.jpg') no-repeat;
+	background: url('https://source.unsplash.com/hJLJX44zcnM/1366x768') no-repeat;
 	background-size: cover;
 	min-height:100vh;
 	font-family: 'Patua One', cursive;
