--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ h1 span{
 	width:90%;
 	min-height:100px;
 	margin:10px auto;
-	background:white;
+	background:#262254;
 	-webkit-box-shadow: 2px 10px 18px -6px rgba(0,0,0,0.75);
 -moz-box-shadow: 2px 10px 18px -6px rgba(0,0,0,0.75);
 box-shadow: 2px 10px 18px -6px rgba(0,0,0,0.75);
