--- a/01-JS-music-kit/css/layout.css
+++ b/01-JS-music-kit/css/layout.css
@@ -12,7 +12,7 @@ body{
 	box-sizing: border-box;
 	width:100%;
 	height: 100vh;
-	background:url("../img/background.jpg") no-repeat;
+	background:url("https://source.unsplash.com/NYrVisodQ2M/1366x768") no-repeat;
 	background-size: cover;
 	display:flex;
 	flex-flow:row wrap;
