--- a/10-Multiple-Checkboxes/css/style.css
+++ b/10-Multiple-Checkboxes/css/style.css
@@ -9,4 +9,5 @@
       font-family: 'Orbitron', sans-serif;
       letter-spacing: 0.1em;
       background: rgb(9, 18, 20);
+      font-size:14px;
     }
