--- a/11-Custom-Video-Player/style.css
+++ b/11-Custom-Video-Player/style.css
@@ -133,6 +133,7 @@ input[type=range]:focus {
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
 }
+
 /* input range user styles*/
 input[type=range]::-webkit-slider-runnable-track{
   
@@ -143,9 +144,27 @@ input[type=range]::-webkit-slider-runnable-track{
   /*border-radius: 1.3px;*/
   border: 0.5px solid rgb(97, 245, 245);
 }
+input[type=range]::-moz-range-track {
+    height: 8.4px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0 0 1px rgba(13, 13, 13, 0);
+  background: rgba(2, 194, 194, 0.3);
+  /*border-radius: 1.3px;*/
+  border: 0.5px solid rgb(97, 245, 245);
+}
 
 input[type=range]::-webkit-slider-thumb{
   height: 15px;
+  width: 5px;
+  
+  background: rgb(97, 245, 245);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -3.5px;
+  box-shadow:0 0 2px rgba(0,0,0,0.2);
+}
+input[type=range]::-moz-range-thumb{
+    height: 15px;
   width: 5px;
   
   background: rgb(97, 245, 245);
