--- a/09-Must-Known-Dev-Tricks/style.css
+++ b/09-Must-Known-Dev-Tricks/style.css
@@ -1,3 +1,45 @@
+body{
+	font-family: 'Share Tech Mono', monospace;
+	color: rgb(9, 18, 20);
+	padding: 0;
+	margin:0;
+}
+h1{
+	padding:15px;
+}
+.wrapper{
+	display:flex;
+	flex-flow:row nowrap;
+	justify-content: flex-start;
+	align-items: stretch;
+}
+.tricks{
+	display:flex;
+	width:40%;
+	
+	flex-flow: column nowrap;
+	justify-content: flex-start;
+	background: rgb(9, 18, 20);
+	
+	margin-left: 120px;
+	border: 1px solid rgb(97, 245, 245);
+	color:rgb(97, 245, 245);
+	padding:10px;
+	
+}
+
 .hero-image{
-	border:solid 1px lightgrey;
+	
+	
+	margin: auto auto 0px 0px;
+
+}
+.content{
+	display:flex;
+	width:20%;
+	
+	/*height:90vh;*/
+	flex-flow: column nowrap;
+	justify-content: space-between;
+	padding-left: 20px;
 }
